--- a/CocosCreator/엔진 커스터마이징.md
+++ b/CocosCreator/엔진 커스터마이징.md
@@ -81,8 +81,24 @@ JavaScript heap out of memory
 
 gulp는 커맨드 수행시 V8 옵션을 지정 가능?
 ```
-gulp build --max_old_space_size=2048
+gulp build --max_old_space_size=4096
 ```
 이걸로 기본 빌드 수행 성공
 
 플레이팹 SDK 설치해보면서 어떻게 설치하는게 맞는 방법인지 다시 시도해봐야 함.
+
+[Bloodguy :: [node.js] FATAL ERROR: CALL_AND_RETRY_LAST Allocation failed - process out of memory 에러 원인, 해결방법] (https://bloodguy.tistory.com/entry/nodejs-FATAL-ERROR-CALLANDRETRYLAST-Allocation-failed-process-out-of-memory-에러-원인-해결방법)
+
+이런 분석 글도 있었음.
+
+다시 엔진 커스터마이징으로 돌아와서
+처음 깃헙에서 받은 마스터 브랜치의 경우 CocosCreator의 버전이 2.0.0,
+2.1.2release 브랜치 등 이 있었음
+해당 버전을 받아서 빌드 수행하니 엔진 실행시 에러 발생.
+내 CocosCreator의 버전은 2.1.1
+다시 깃헙으로 가서 tag를 2.1.1로 바꿔서 프로젝트 다시 받고 빌드 수행하니 정상 작동.
+
+이제 엔진을 커스텀 하면 되겠다
+
+는 빠른 포기...
+Playfab 쓰기 어렵다
